Fix: safari browser UI overlaps header menu buttons. Attempt 2

--- a/src/components/Layout/Header/style.scss
+++ b/src/components/Layout/Header/style.scss
@@ -117,7 +117,7 @@
 .mobileMenu {
     width: 100%;
     height: 100%;
-    min-height: 100vh;
+    min-height: 100lvh;
 
     display: none;
     position: fixed;
@@ -147,6 +147,7 @@
 
     &__content {
         height: 100svh;
+
         padding-top: 6px;
         padding-right: 6px;
         padding-left: 24px;
